[package]
name = "triplet-miner"
version = "0.1.0"
edition = "2021"
description = "Metric learning triplet mining: semi-hard mining, distance computation, quality filtering"
license = "MIT"
keywords = ["machine-learning", "triplet-mining", "metric-learning", "embeddings"]
categories = ["algorithms", "science"]
repository = "https://github.com/SuperInstance/triplet-miner-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
